@startuml
'https://plantuml.com/class-diagram

interface CommandExecutor {
	void execute(Command command){}
}

class CutCommandExecutor implements CommandExecutor {
	- OptionExecutorFactory optionExecutorFactory
	- PrinterFactory printerFactory
	+ void execute(Command command)
}

class NonCutCommandExecutor implements CommandExecutor {
	- PrinterFactory printerFactory
    + void execute(Command command)
}

class ExitCommandExecutor implements CommandExecutor {
	- PrinterFactory printerFactory
	+ void execute(Command command)
}
CommandExecutorFactory -- CommandExecutor
CommandExecutor -left- Command
CommandExecutor -right- PrinterFactory

!include Command.iuml!0


!include Factory.iuml!1
!include Factory.iuml!4
!include Factory.iuml!5



CutCommandExecutor -- OptionExecutorFactory

interface OptionExecutor {
	void executeOption(Command processedCommand)
}

class ByteCutOptionExecutor implements OptionExecutor {
    - PrinterFactory printerFactory
    + void executeOption(Command command)
    - String handleLine(String line, ProcessedCommand processedCommand)
    - int getValidUtf8Start(byte[] bytes, int index)
}

class CharacterCutOptionExecutor implements OptionExecutor {
    - PrinterFactory printerFactory
    + void executeOption(Command command)
    - String handleLine(String line, ProcessedCommand processedCommand)
}

class FieldCutOptionExecutor implements OptionExecutor {
    - PrinterFactory printerFactory
    + void executeOption(Command command)
    - String handleLine(String line, ProcessedCommand processedCommand)
}

OptionExecutorFactory -- OptionExecutor
@enduml